tests/NormalTests/paczka1/fuzzy1/76018851.err
Error in line 14: VBvERih S361 7,2
Error in line 25: VBvERih S361 4+,+
Error in line 33: VscUUCRA S544 57,0
